Fix: Component's z-index

--- a/src/app/smn-ui/color-picker/color-picker.component.scss
+++ b/src/app/smn-ui/color-picker/color-picker.component.scss
@@ -73,6 +73,7 @@
 }
 
 /deep/ .wrap-color-picker {
+    z-index: 5;
 
     .overlay {
         overflow: hidden;
