--- a/src/app/smn-ui/menu/menu.component.scss
+++ b/src/app/smn-ui/menu/menu.component.scss
@@ -14,7 +14,7 @@
     transform-origin: top left;
     transform: scale(0);
     opacity: 0;
-    z-index: 6;
+    z-index: 5;
 
     &.right {
         transform-origin: top right;
